# RisePakPatch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  clang-format.ps1  create-release.ps1  ninja_build_debug.bat  ninja_build_release.bat
rust/: Cargo.toml
rust/src/: entry.rs  lib.rs  main.rs  mmh3_32.rs  patcher.rs  reader.rs  utils.rs  writer.rs
scripts/: CreatePak.bat  ExtractPak.bat
src/: logger.h  main.cpp  murmurhash.cpp  murmurhash.h  risepakpatch.cpp  risepakpatch.h  utils.cpp  utils.h  writer.h
src/lib/: logger.cpp  logger.h  murmurhash.cpp  murmurhash.h  reader.h  risepakpatch.cpp  risepakpatch.h  utils.cpp  utils.h  writer.h
tools/ChecksumDiff/: build.bat  go.mod
tools/ChecksumDiff/cmd/diff/: main.go
